infra/aspire-dashboard/0.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspire-dashboard
  namespace: express-messenger
  labels:
    app: aspire-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aspire-dashboard
  template:
    metadata:
      labels:
        app: aspire-dashboard
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: aspire-dashboard
          image: mcr.microsoft.com/dotnet/aspire-dashboard:8.0
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - name: dashboard-ui
              containerPort: 18888
            - name: otlp
              containerPort: 18889
---
apiVersion: v1
kind: Service
metadata:
  name: aspire-dashboard-clusterip
  namespace: express-messenger
spec:
  selector:
    app: aspire-dashboard
  ports:
    - name: dashboard-ui
      protocol: TCP
      port: 18888
      targetPort: 18888
    - name: otlp
      protocol: TCP
      port: 18889
      targetPort: 18889
  type: ClusterIP
