infra/aspire-dashboard/1.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspire-dashboard-ingress
  namespace: express-messenger
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aspire-dashboard
                port:
                  number: 80
